finished job.js

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/MeetMangrove/digest-slack-bot#readme",
   "dependencies": {
     "mongoose": "^4.5.9",
+    "request": "^2.74.0",
     "slackbots": "^0.5.2"
   }
 }
